fix(navbar): enhanced margin on small screens

--- a/src/app/components/Navbar/navbar.module.scss
+++ b/src/app/components/Navbar/navbar.module.scss
@@ -61,3 +61,14 @@ $buttonHover: #0071e3;
 .mail:hover {
   color: #b53737;
 }
+
+@media (max-width: 480px) {
+  .navbarLeftItems {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  .navbarRightItems {
+    margin-right: 8px;
+  }
+}
